tests/toy/neg/001658_mutation.toylang
program a = { while a 0 do sleep; } .
